Modificamos la base de datos

--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -18,7 +18,7 @@
     {{!-- STYLES --}}
     <link rel="stylesheet" href="/css/styles.css">
 
-    <title>Template</title>
+    <title>Mintel</title>
 </head>
 
 <body>
