--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,6 +1,236 @@
 {{>navbar}}
 
-<section class="container">
-    {{>message}}
+<div id="home"></div>
 
+<section class="welcome">
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-12 col-md-6 col-lg-6 mb-3">
+                <h1 class="text-center text-md-left mb-4">
+                    Bienvenidos al <span class="text-primary">Mintel</span>
+                </h1>
+                <p class="lead text-center text-md-left text-muted">
+                    Somos una empresa dedicada a la transformacion digital
+                    de nuestros hogares a traves del internet de las cosas.
+                </p>
+
+                <div class="text-center text-md-left mt-5">
+                    <a href="#" class="btn btn-primary shadow lift mr-2">Comprar</a>
+                    <a href="#" class="btn btn-outline-secondary lift">Mas informacion</a>
+                </div>
+            </div>
+
+            <div class="col-12 col-md-6 col-lg-6">
+                <img src='https://images.pexels.com/photos/205316/pexels-photo-205316.png?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940'
+                    class="" alt="" />
+            </div>
+        </div>
+    </div>
+    <div id="products"></div>
 </section>
+
+<div class="container mt-5 mb-5">
+    <div class="row justify-content-center">
+        <div class="col-lg-4 col-md-6 col-12 text-center mb-5">
+            <div class="card n-border">
+                <div class="card-body shadow-lg">
+                    <span class="badge alert-primary mb-3 p-2">Confort house</span>
+                    <h1 class="mb-5">$500</h1>
+                    <p>
+                        <i class="fas fa-check-circle icon-ok"></i> 13 salidas para tu
+                        hogar
+                    </p>
+                    <p>
+                        <i class="fas fa-check-circle icon-ok"></i> 5 sensores que
+                        monitorearán tu hogar
+                    </p>
+                    <p>
+                        <i class="fas fa-check-circle icon-ok"></i> Personalizacion de
+                        la app
+                    </p>
+                    <p>
+                        <i class="fas fa-check-circle icon-ok"></i> Dashboard para
+                        metricas
+                    </p>
+                    <p>
+                        <i class="fas fa-check-circle icon-ok"></i> Maximo 5 usuarios
+                    </p>
+
+                    <a href="#" class="btn btn-primary btn-block">
+                        Adquirir
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 col-12 text-center mb-5">
+            <div class="card n-border">
+                <div class="card-body shadow-lg">
+                    <span class="badge alert-primary mb-3 p-2">Confort house +</span>
+                    <h1 class="mb-5">$1000</h1>
+                    <p>
+                        <i class="fas fa-check-circle icon-ok"></i> 56 salidas para tu
+                        hogar
+                    </p>
+                    <p>
+                        <i class="fas fa-check-circle icon-ok"></i> 10 sensores que
+                        monitorearán tu hogar
+                    </p>
+                    <p>
+                        <i class="fas fa-check-circle icon-ok"></i> Personalizacion de
+                        la app
+                    </p>
+                    <p>
+                        <i class="fas fa-check-circle icon-ok"></i> Dashboard para
+                        metricas
+                    </p>
+                    <p>
+                        <i class="fas fa-check-circle icon-ok"></i> Maximo 10 usuarios
+                    </p>
+                    <a href="#" class="btn btn-primary btn-block">
+                        Adquirir
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 col-12 text-center mb-5">
+            <div class="card n-border">
+                <div class="card-body shadow-lg">
+                    <span class="badge alert-primary mb-3 p-2">
+                        Mintel industrial
+                    </span>
+                    <h1 class="mb-5">$5000</h1>
+                    <p>
+                        <i class="fas fa-check-circle icon-ok"></i> 56 salidas para tu
+                        empresa
+                    </p>
+                    <p>
+                        <i class="fas fa-check-circle icon-ok"></i> 10 sensores que
+                        monitorearán tu empresa
+                    </p>
+                    <p>
+                        <i class="fas fa-check-circle icon-ok"></i> Personalizacion de
+                        la app
+                    </p>
+                    <p>
+                        <i class="fas fa-check-circle icon-ok"></i> Dashboard para
+                        metricas
+                    </p>
+                    <p>
+                        <i class="fas fa-check-circle icon-ok"></i> Software a la medida
+                        de la empresa
+                    </p>
+                    <p>
+                        <i class="fas fa-check-circle icon-ok"></i> Sin limite de
+                        usuarios
+                    </p>
+                    <a href="#" class="btn btn-primary btn-block">
+                        Adquirir
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="software"></div>
+</div>
+
+<div class="software container pt-5 mb-5">
+    <div class="row">
+        <div class="col-12 col-lg-6 mb-5">
+            <img src="https://consumer-img.huawei.com/content/dam/huawei-cbg-site/latam/latin/mkt/pdp/plp-banner/x-pro.png"
+                alt="" />
+        </div>
+
+        <div class="col-12 col-lg-6">
+            <h1 class="text-center text-md-left mb-5">
+                La mejor aplicacion de IoT
+                <br />
+                <span class="text-primary">Mintel House</span>
+            </h1>
+            <div class="d-flex">
+                <i class="fas fa-desktop icon mr-3 pt-2"></i>
+                <p class="lead text-center text-md-left text-muted">
+                    Aplicacion web agradable a la vista y de facil uso donde
+                    controlaras todos los elementos de tu hogar.
+                </p>
+            </div>
+
+            <div class="d-flex">
+                <i class="fas fa-tachometer-alt icon mr-3 pt-1"></i>
+                <p class="lead text-center text-md-left text-muted">
+                    La aplicacion web cuenta con un rendimiento increible, podras
+                    utilizarla desde cualquier dispositivo
+                </p>
+            </div>
+        </div>
+    </div>
+    <div id="about"></div>
+</div>
+
+<div class="container mt-5 mb-5">
+    <div class="row justify-content-center">
+        <div class="col-lg-4 col-md-6 col-12 text-center mt-5">
+            <i class="fas fa-home icon mb-3"></i>
+            <h3 class="mb-3">Mintel</h3>
+            <p class="text-muted">
+                Somos una empresa mexicana enfocada el en internet de las cosas.
+                Contamos con varios metodos para transformar tu hogar en una
+                completa maravilla tecnologica.
+            </p>
+        </div>
+
+        <div class="col-lg-4 col-md-6 col-12 text-center mt-5">
+            <i class="fas fa-warehouse icon mb-3"></i>
+            <h3 class="mb-3">Confort house</h3>
+            <p class="text-muted">
+                Es nuestra tarjeta especializada en la automatizacion y control de
+                hogares. Este dispositivo se vincula a tu celular, donde controlaras
+                los elementos de tu hogar.
+            </p>
+        </div>
+
+        <div class="col-lg-4 col-md-6 col-12 text-center mt-5">
+            <i class="fas fa-mobile-alt icon mb-3"></i>
+            <h3 class="mb-3">Mintel House</h3>
+            <p class="text-muted">
+                Aplicacion web enfocada en el control de luminarias, contactos,
+                electrodomesticos y agua de tu hogar. Tambien el monitoreo
+                de sensores especiales para el hogar.
+            </p>
+        </div>
+    </div>
+    <div id="contact"></div>
+</div>
+
+<div class="contact container">
+    <div class="row">
+        <div class="col-lg-5 col-md-8 col-12 mx-auto mb-5">
+            <div class="card tarjeta n-border shadow-lg">
+                <img src="https://images.pexels.com/photos/461077/pexels-photo-461077.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+                    class="card-img-top" alt="..." />
+                <div class="card-body text-center">
+                    <h2 class="card-title mb-4">Contactanos</h2>
+                    <p class="card-text">
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Nombre" />
+                    </div>
+
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Correo " />
+                    </div>
+
+                    <div class="form-group">
+                        <textarea type="text" class="form-control" placeholder="Mensaje"></textarea>
+                    </div>
+                    </p>
+                    <button href="#" class="btn btn-primary btn-block">
+                        Enviar
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+{{>footer}}
