--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -18,7 +18,7 @@
                         {{user.user}}
                     </button>
                     <div class="dropdown-menu">
-                        <a href="/profile" class="dropdown-item">Ver perfil</a>
+                        <a href="/" class="dropdown-item">Ver perfil</a>
                         <a href="/logout" class="dropdown-item">Salir</a>
                     </div>
                 </div>
