--- a/src/views/partials/sidebar.hbs
+++ b/src/views/partials/sidebar.hbs
@@ -1,6 +1,6 @@
 <nav id="sidebar" class="sidebar">
     <div class="sidebar-header">
-        <h4><a class="link" href="/admin">Template</a></h4>
+        <h4><a class="link" href="/admin">Mintel</a></h4>
     </div>
 
     <ul class="list-unstyled side_ul components">
