--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -7,8 +7,37 @@
 body {
   font-family: "Open Sans", sans-serif;
   font-size: 16px;
-  background-color: #e6e7e9;
+  background-color: #fff;
 }
+
+/* LOGIN */
+.login {
+  border: solid black 1px;
+  border-radius: 40px;
+  padding: 0px 10px;
+}
+
+.remember {
+  font-size: 14px;
+  display: flex;
+  justify-content: space-around;
+}
+
+.login-register {
+  display: flex;
+  justify-content: space-around;
+  font-size: 14px;
+}
+
+.login-register a {
+  font-weight: bold;
+  color: black;
+}
+
+.p-terms {
+  font-size: 13px;
+}
+/* /LOGIN */
 
 .sidebar {
   width: 250px;
@@ -100,7 +129,7 @@ a[data-toggle="collapse"] {
 /* NAVBAR */
 
 .bg-gray {
-  background-color:  #efeff1;
+  background-color: #efeff1;
 }
 
 .btn-oxford {
@@ -186,6 +215,11 @@ a[data-toggle="collapse"] {
 @media (max-width: 500px) {
   .navbar {
     padding: 10px;
+  }
+
+  .login {
+    border: none;
+    padding: 0px;
   }
 
   #content {
