--- a/src/views/auth/login.hbs
+++ b/src/views/auth/login.hbs
@@ -1,7 +1,7 @@
-{{>navbar}}
+{{>nav-auth}}
 {{>message}}
 
-<div class="container mt-5">
+{{!-- <div class="container mt-5">
     <div class="row">
         <div class="col-md-5 col-xl-4 mx-auto">
             <div class="card text-center">
@@ -16,11 +16,12 @@
                         </div>
 
                         <div class="form-group">
-                            <input type="password" name="password" placeholder="Contraseña" class="form-control" required>
+                            <input type="password" name="password" placeholder="Contraseña" class="form-control"
+                                required>
                         </div>
 
                         <div class="form-group">
-                            <button class="btn btn-success btn-block">
+                            <button class="btn btn-primary btn-block">
                                 Iniciar sesión
                             </button>
                         </div>
@@ -29,4 +30,53 @@
             </div>
         </div>
     </div>
+</div> --}}
+
+<div id="login" class="container mt-5 mb-5">
+    <div class="row">
+        <div class="col-xl-4 col-lg-5 col-md-6 col-12 mx-auto">
+            <div class="card text-center login pt-5 pb-5">
+                <div class="card-body">
+                    <div class="card-title mb-5">
+                        <h2>Iniciar sesión</h2>
+                    </div>
+                    <form action="/login" method="POST">
+
+                        <div class="form-group">
+                            <input type="email" name="email" placeholder="Email" class="form-control" required>
+                        </div>
+
+                        <div class="form-group">
+                            <input type="password" name="password" placeholder="Contraseña" class="form-control"
+                                required>
+                        </div>
+
+                        <div class="form-group pt-3">
+                            <button class="btn btn-primary btn-block pt-2 pb-2">
+                                Iniciar sesión
+                            </button>
+                        </div>
+
+                        <div class="form-group remember pt-3">
+                            <div>
+                                <input type="checkbox" name="recuerdame" id="recuerdame">
+                                <label for="recuerdame">Recuérdame</label>
+                            </div>
+
+                            <a href="#">Olvidé mi contraseña</a>
+                        </div>
+
+                        <div class="form-group login-register pt-4">
+                            <p>¿No tienes ninguna cuenta?</p>
+                            <a href="/signup">Registrate</a>
+                        </div>
+
+
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+
+{{>footer}}
