--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -3,8 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta charset="UTF-8">
-    <meta name="description" content="Multi rastreo app, you can locate your car.">
+    <meta name="description" content="Mintel.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Bootstrap 4 -->
@@ -17,6 +16,7 @@
 
     {{!-- STYLES --}}
     <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/landing.css">
 
     <title>Mintel</title>
 </head>
@@ -34,6 +34,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
         integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
         crossorigin="anonymous"></script>
+
+    <script src="/js/main.js"></script>
 </body>
 
 </html>
