--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -18,6 +18,10 @@
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/landing.css">
 
+    {{!-- Scroll Reveal --}}
+    <script src="https://unpkg.com/scrollreveal"></script>
+
+
     <title>Mintel</title>
 </head>
 
