--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -40,6 +40,7 @@
         crossorigin="anonymous"></script>
 
     <script src="/js/main.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
 </body>
 
 </html>
