seguimos maquetando la pagina web

--- a/src/views/home/home.hbs
+++ b/src/views/home/home.hbs
@@ -1,15 +1,96 @@
 {{>nav-auth}}
 
-<div class="container mt-5">
+<div class="container mt-4 mb-5">
     <div class="row">
-        <div class="col-lg-3">
+
+        <div class="col-lg-3 col-md-6 col-12 mx-auto mb-5">
             <div class="card">
                 <img src="https://images.pexels.com/photos/262048/pexels-photo-262048.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
                     class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Habitacion Francisco</h5>
+                    <h5 class="card-title">Habitacion Principal</h5>
                     <p class="card-text">Controla luces y contactos de esta habitacion</p>
-                    <a href="#" class="btn btn-primary">Click aqui</a>
+                    <div class="d-flex justify-content-between align-items-center">
+                        <a href="#" class="btn btn-primary">Click aqui</a> <a href="/home/edit"><i
+                                class="fas fa-cog icon-edit"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 col-12 mx-auto mb-5">
+            <div class="card">
+                <img src="https://images.pexels.com/photos/4713256/pexels-photo-4713256.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+                    class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Habitacion hijos</h5>
+                    <p class="card-text">Controla luces y contactos de esta habitacion</p>
+                    <div class="d-flex justify-content-between align-items-center">
+                        <a href="#" class="btn btn-primary">Click aqui</a> <a href="/home/edit"><i
+                                class="fas fa-cog icon-edit"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 col-12 mx-auto mb-5">
+            <div class="card">
+                <img src="https://images.pexels.com/photos/2631746/pexels-photo-2631746.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+                    class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Habitacion extra</h5>
+                    <p class="card-text">Controla luces y contactos de esta habitacion</p>
+                    <div class="d-flex justify-content-between align-items-center">
+                        <a href="#" class="btn btn-primary">Click aqui</a> <a href="/home/edit"><i
+                                class="fas fa-cog icon-edit"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-lg-3 col-md-6 col-12 mx-auto mb-5">
+            <div class="card">
+                <img src="https://images.pexels.com/photos/1457842/pexels-photo-1457842.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+                    class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Sala</h5>
+                    <p class="card-text">Controla luces y contactos de esta habitacion</p>
+                    <div class="d-flex justify-content-between align-items-center">
+                        <a href="#" class="btn btn-primary">Click aqui</a> <a href="/home/edit"><i
+                                class="fas fa-cog icon-edit"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 col-12 mx-auto mb-5">
+            <div class="card">
+                <img src="https://images.pexels.com/photos/1454804/pexels-photo-1454804.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+                    class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Baño</h5>
+                    <p class="card-text">Controla luces y contactos de esta habitacion</p>
+                    <div class="d-flex justify-content-between align-items-center">
+                        <a href="#" class="btn btn-primary">Click aqui</a> <a href="/home/edit"><i
+                                class="fas fa-cog icon-edit"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 col-12 mx-auto mb-5">
+            <div class="card">
+                <img src="https://images.pexels.com/photos/1055408/pexels-photo-1055408.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+                    class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Jardin</h5>
+                    <p class="card-text">Controla luces y contactos de esta habitacion</p>
+                    <div class="d-flex justify-content-between align-items-center">
+                        <a href="#" class="btn btn-primary">Click aqui</a> <a href="/home/edit"><i
+                                class="fas fa-cog icon-edit"></i></a>
+                    </div>
                 </div>
             </div>
         </div>
