--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -167,6 +167,16 @@ a[data-toggle="collapse"] {
   height: 50px;
 }
 
+.icon-edit {
+  font-size: 30px;
+  color: black;
+  text-decoration: none;
+}
+
+.card-img-top {
+  height: 180px;
+}
+
 /* ADMIN CRUD */
 .button-oxford {
   background-color: #00949c;
