--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -89,9 +89,6 @@
                     <p>
                         <i class="fas fa-check-circle icon-ok"></i> Maximo 10 usuarios
                     </p>
-                    <p>
-                        <i class="fas fa-check-circle icon-ok"></i> Manteminiemto asegurado
-                    </p>
                     <a href="#" class="btn btn-primary btn-block">
                         Adquirir
                     </a>
@@ -111,8 +108,7 @@
                         empresa
                     </p>
                     <p>
-                        <i class="fas fa-check-circle icon-ok"></i> 10 sensores que
-                        monitorearán tu empresa
+                        <i class="fas fa-check-circle icon-ok"></i> 10 sensores para tu empresa
                     </p>
                     <p>
                         <i class="fas fa-check-circle icon-ok"></i> Personalizacion de
