--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -39,7 +39,7 @@
         integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
         crossorigin="anonymous"></script>
 
-    {{!-- <script src="/socket.io/socket.io.js"></script> --}}
+    <script src="/socket.io/socket.io.js"></script>
     <script src="/js/main.js"></script>
 </body>
 
