--- a/src/views/partials/nav-auth.hbs
+++ b/src/views/partials/nav-auth.hbs
@@ -20,7 +20,7 @@
         {{else}}
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="ml-auto">
-                <a href="/login" class="btn btn-outline-secondary mr-1">Iniciar sesion</a>
+                <a href="/login" class="btn btn-outline-secondary mr-1">Iniciar sesión</a>
                 <a href="/signup" class="btn btn-primary">Registrate</a>
             </div>
         </div>
