--- a/src/views/partials/navbar.hbs
+++ b/src/views/partials/navbar.hbs
@@ -36,7 +36,7 @@
 
             {{else}}
             <div class="ml-auto">
-                <a href="/login" class="btn btn-outline-secondary mr-1">Iniciar sesion</a>
+                <a href="/login" class="btn btn-outline-secondary mr-1">Iniciar sesión</a>
                 <a href="/signup" class="btn btn-primary">Registrate</a>
             </div>
             {{/if}}
